# tmpl-app

./: .gitignore  README.md  download_assets.sh  main.py  pyproject.toml  setup.py
tmpl_app/: __init__.py
tmpl_app/config/: __init__.py  app_config.py
tmpl_app/core/: sdl_app.py
tmpl_app/players/: __init__.py  image_sequence.py  video.py
tmpl_app/utils/: __init__.py
