# pyproject.toml
[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tmpl_app"
version = "1.0.0"
description = "The Most Polish Landscape App"
requires-python = ">=3.7"
dependencies = [
    "av>=10.0.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "pysdl2>=0.9.16",
    "pysdl2-dll>=2.28.0",
]

[project.scripts]
tmpl-app = "main:main"